@@ -1,7 +1,6 @@
 package com.examples.inventory.repository.mongo;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -32,7 +31,7 @@ public class MongoProductRepository implements ProductRepository {
 		return StreamSupport.
 			stream(productCollection.find().spliterator(), false)
 				.map(this::fromDocumentToProduct)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private Product fromDocumentToProduct(Document d) {
